# fifo

./: .gitignore  CMakeLists.txt  docker-compose.yml
include/: fifo.h
src/: fifo.c
tests/: CMakeLists.txt  fifo_test.c
